Clean up home page and re-arrange templates.

--- a/src/sphinx_bulma/homepage/homepage.html
+++ b/src/sphinx_bulma/homepage/homepage.html
@@ -1,4 +1,82 @@
 {%- extends document.layout %}
+{% block homepage_hero %}
+    <div class="hero-body">
+        <div class="container has-text-centered">
+            <h1 class="title is-2">
+                Hero Heading
+            </h1>
+            <h2 class="subtitle is-5">
+                A hero description could go here.
+            </h2>
+        </div>
+    </div>
+{% endblock %}
 {% block body %}
-    {{ body }}
+    <div class="container">
+        <div class="columns">
+            <div class="column is-4">
+                <div class="card section">
+                    <div class="card-image">
+                        <p class="has-text-centered">
+                            <i style="font-size: 5rem"
+                               class="fa fa-camera-retro icon-block"></i>
+                        </p>
+                    </div>
+                    <div class="card-content">
+                        <div class="content">
+                            First Lorem ipsum dolor sit amet, consectetur
+                            adipiscing
+                            elit.
+                            Phasellus nec iaculis mauris. <a>@bulmaio</a>.
+                            <a>#css</a> <a>#responsive</a>
+                            <br>
+                            <small>11:09 PM - 1 Jan 2016</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="column is-4">
+                <div class="card section">
+                    <div class="card-image">
+                        <p class="has-text-centered">
+                            <i style="font-size: 5rem"
+                               class="fa fa-camera-retro icon-block"></i>
+                        </p>
+                    </div>
+                    <div class="card-content">
+                        <div class="content">
+                            Second Lorem ipsum dolor sit amet, consectetur
+                            adipiscing
+                            elit.
+                            Phasellus nec iaculis mauris. <a>@bulmaio</a>.
+                            <a>#css</a> <a>#responsive</a>
+                            <br>
+                            <small>11:09 PM - 1 Jan 2016</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="column is-4">
+                <div class="card section">
+                    <div class="card-image">
+                        <p class="has-text-centered">
+                            <i style="font-size: 5rem"
+                               class="fa fa-camera-retro icon-block"></i>
+                        </p>
+                    </div>
+                    <div class="card-content">
+                        <div class="content">
+                            Third Lorem ipsum dolor sit amet, consectetur
+                            adipiscing
+                            elit.
+                            Phasellus nec iaculis mauris. <a>@bulmaio</a>.
+                            <a>#css</a> <a>#responsive</a>
+                            <br>
+                            <small>11:09 PM - 1 Jan 2016</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
