--- a/src/sphinx_bulma/article/article.html
+++ b/src/sphinx_bulma/article/article.html
@@ -1,15 +1,25 @@
 {%- extends document.layout %}
 
 {% block body %}
-    {% set post = ablog[pagename] %}
-    <div class="content section sb-body">
-        <div class="section">
-            <h2 class="title is-2">{{ title }}</h2>
-            {% if post.date %}
-                <h2 class="title is-6">{{ post.date.strftime(gettext(ablog.post_date_format)) }}</h2>
-            {% endif %}
-        </div>
-        {{ body }}
-    </div>
+    <div class="container sb-article">
+        <div class="columns is-desktop is-1-tablet .ordered-mobile">
+            <div class="column is-2 fl-1">
+                {{ sbc['sidenav']() }}
+            </div>
+            <div class="column is-10 fl-2">
 
+
+                {% set post = ablog[pagename] %}
+                <div class="content section sb-body">
+                    <div class="section">
+                        <h2 class="title is-2">{{ title }}</h2>
+                        {% if post.date %}
+                            <h2 class="title is-6">{{ post.date.strftime(gettext(ablog.post_date_format)) }}</h2>
+                        {% endif %}
+                    </div>
+                    {{ body }}
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
