Get the navbar items the way they should be, minus search (much later).

--- a/playground/tutorial.html
+++ b/playground/tutorial.html
@@ -13,20 +13,6 @@
                  width="112" height="28">
         </a>
 
-        <a class="navbar-item is-hidden-desktop"
-           href="https://github.com/jgthms/bulma" target="_blank">
-          <span class="icon" style="color: #333;">
-            <i class="fa fa-github"></i>
-          </span>
-        </a>
-
-        <a class="navbar-item is-hidden-desktop"
-           href="https://twitter.com/jgthms" target="_blank">
-          <span class="icon" style="color: #55acee;">
-            <i class="fa fa-twitter"></i>
-          </span>
-        </a>
-
         <div class="navbar-burger burger" data-target="navMenuExample">
             <span></span>
             <span></span>
@@ -39,18 +25,35 @@
             <a class="navbar-item " href="http://bulma.io/">
                 Home
             </a>
+            <a class="navbar-item " href="http://bulma.io/">
+                Blog
+            </a>
+            <a class="navbar-item " href="http://bulma.io/">
+                Articles
+            </a>
+            <a class="navbar-item " href="http://bulma.io/">
+                Tutorials
+            </a>
+            <a class="navbar-item " href="http://bulma.io/">
+                About
+            </a>
         </div>
 
         <div class="navbar-end">
-            <a class="navbar-item is-active"
-               href="https://github.com/jgthms/bulma"
-               target="_blank">
-                Github
+            <a class="navbar-item"
+               href="https://github.com/jgthms/bulma" target="_blank">
+              <span class="icon" style="color: #333;">
+                <i class="fa fa-github"></i>
+              </span>
             </a>
-            <a class="navbar-item" href="https://twitter.com/jgthms"
-               target="_blank">
-                Twitter
+
+            <a class="navbar-item"
+               href="https://twitter.com/jgthms" target="_blank">
+              <span class="icon" style="color: #55acee;">
+                <i class="fa fa-twitter"></i>
+              </span>
             </a>
+
         </div>
     </div>
 </nav>
