--- a/src/sphinx_bulma/navbar/navbar.html
+++ b/src/sphinx_bulma/navbar/navbar.html
@@ -5,58 +5,7 @@
           href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
-<section class="hero is-primary is-medium">
-  <!-- Hero header: will stick at the top -->
-  <div class="hero-head">
-    <nav class="nav">
-      <div class="container">
-        <div class="nav-left">
-          <a class="nav-item">
-            <img src="images/bulma-type-white.png" alt="Logo">
-          </a>
-        </div>
-        <span class="nav-toggle">
-          <span></span>
-          <span></span>
-          <span></span>
-        </span>
-        <div class="nav-right nav-menu">
-          <a class="nav-item is-active">
-            Homes
-          </a>
-          <a class="nav-item">
-            Examples
-          </a>
-          <a class="nav-item">
-            Documentation
-          </a>
-          <span class="nav-item">
-            <a class="button is-primary is-inverted">
-              <span class="icon">
-                <i class="fa fa-github"></i>
-              </span>
-              <span>Download</span>
-            </a>
-          </span>
-        </div>
-      </div>
-    </nav>
-  </div>
-
-  <!-- Hero content: will be in the middle -->
-  <div class="hero-body">
-    <div class="container has-text-centered">
-      <h1 class="title">
-        Title
-      </h1>
-      <h2 class="subtitle">
-        Subtitle
-      </h2>
-    </div>
-  </div>
-</section>
-
-<nav class="navbar" style="display: none">
+<nav class="navbar ">
     <div class="navbar-brand">
         <a class="navbar-item" href="http://bulma.io">
             <img src="http://bulma.io/images/bulma-logo.png"
