--- a/src/sphinx_bulma/navbar/navbar_demo.html
+++ b/src/sphinx_bulma/navbar/navbar_demo.html
@@ -7,49 +7,45 @@
 <body>
 
 </body>
-<section class="hero is-warning is-bold is-small">
+<section class="hero is-primary is-bold is-small">
     <div class="hero-head">
         <nav class="nav">
-            <div class="nav-left">
-                <a class="nav-item">
-                    <img src="http://bulma.io/images/bulma-logo.png"
-                         alt="Bulma logo">
-                </a>
-                <a class="nav-item">
-                    Home
-                </a>
-                <a class="nav-item is-active">
-                    Blog
-                </a>
-                <a class="nav-item">
-                    Articles
-                </a>
-                <a class="nav-item">
-                    Tutorials
-                </a>
-                <a class="nav-item">
-                    About
-                </a>
-            </div>
+                <div class="nav-left">
+                    <a class="nav-item">
+                        <img src="http://bulma.io/images/bulma-logo.png"
+                             alt="Bulma logo">
+                    </a>
+                    <a class="nav-item is-hidden-mobile is-active">Home</a>
+                    <a class="nav-item is-hidden-mobile">Blog</a>
+                    <a class="nav-item is-hidden-mobile">Articles</a>
+                    <a class="nav-item is-hidden-mobile">Tutorials</a>
+                    <a class="nav-item is-hidden-mobile">About</a>
+                </div>
+                <span class="nav-toggle" data-target="navCollapseTarget">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                </span>
+                <div id="navCollapseTarget" class="nav-right nav-menu">
+                    <a class="nav-item is-hidden-tablet is-active">Home</a>
+                    <a class="nav-item is-hidden-tablet">Blog</a>
+                    <a class="nav-item is-hidden-tablet">Articles</a>
+                    <a class="nav-item is-hidden-tablet">Tutorials</a>
+                    <a class="nav-item is-hidden-tablet">About</a>
+                    <a class="navbar-item"
+                       href="https://github.com/jgthms/bulma" target="_blank">
+                      <span class="icon" style="color: #333;">
+                        <i class="fa fa-github"></i>
+                      </span>
+                    </a>
 
-            <div class="nav-center">
-                <a class="nav-item">
-                  <span class="icon">
-                    <i class="fa fa-github"></i>
-                  </span>
-                </a>
-                <a class="nav-item">
-                  <span class="icon">
-                    <i class="fa fa-twitter"></i>
-                  </span>
-                </a>
-            </div>
-
-            <span class="nav-toggle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </span>
+                    <a class="navbar-item"
+                       href="https://twitter.com/jgthms" target="_blank">
+                      <span class="icon" style="color: #55acee;">
+                        <i class="fa fa-twitter"></i>
+                      </span>
+                    </a>
+                </div>
         </nav>
     </div>
 
