Get the panel boxes laid out. Start on the listings.

--- a/src/sphinx_bulma/navbar/navbar_demo.html
+++ b/src/sphinx_bulma/navbar/navbar_demo.html
@@ -10,55 +10,217 @@
 <section class="hero is-primary is-bold is-small">
     <div class="hero-head">
         <nav class="nav">
-                <div class="nav-left">
-                    <a class="nav-item">
-                        <img src="http://bulma.io/images/bulma-logo.png"
-                             alt="Bulma logo">
-                    </a>
-                    <a class="nav-item is-hidden-mobile is-active">Home</a>
-                    <a class="nav-item is-hidden-mobile">Blog</a>
-                    <a class="nav-item is-hidden-mobile">Articles</a>
-                    <a class="nav-item is-hidden-mobile">Tutorials</a>
-                    <a class="nav-item is-hidden-mobile">About</a>
-                </div>
-                <span class="nav-toggle" data-target="navCollapseTarget">
+            <div class="nav-left">
+                <a class="nav-item">
+                    <img src="http://bulma.io/images/bulma-logo.png"
+                         alt="Bulma logo">
+                </a>
+                <a class="nav-item is-hidden-mobile is-active">Home</a>
+                <a class="nav-item is-hidden-mobile">Blog</a>
+                <a class="nav-item is-hidden-mobile">Articles</a>
+                <a class="nav-item is-hidden-mobile">Tutorials</a>
+                <a class="nav-item is-hidden-mobile">About</a>
+            </div>
+            <span class="nav-toggle" data-target="navCollapseTarget">
                   <span></span>
                   <span></span>
                   <span></span>
                 </span>
-                <div id="navCollapseTarget" class="nav-right nav-menu">
-                    <a class="nav-item is-hidden-tablet is-active">Home</a>
-                    <a class="nav-item is-hidden-tablet">Blog</a>
-                    <a class="nav-item is-hidden-tablet">Articles</a>
-                    <a class="nav-item is-hidden-tablet">Tutorials</a>
-                    <a class="nav-item is-hidden-tablet">About</a>
-                    <a class="navbar-item"
-                       href="https://github.com/jgthms/bulma" target="_blank">
+            <div id="navCollapseTarget" class="nav-right nav-menu">
+                <a class="nav-item is-hidden-tablet is-active">Home</a>
+                <a class="nav-item is-hidden-tablet">Blog</a>
+                <a class="nav-item is-hidden-tablet">Articles</a>
+                <a class="nav-item is-hidden-tablet">Tutorials</a>
+                <a class="nav-item is-hidden-tablet">About</a>
+                <a class="navbar-item"
+                   href="https://github.com/jgthms/bulma" target="_blank">
                       <span class="icon" style="color: #333;">
                         <i class="fa fa-github"></i>
                       </span>
-                    </a>
+                </a>
 
-                    <a class="navbar-item"
-                       href="https://twitter.com/jgthms" target="_blank">
+                <a class="navbar-item"
+                   href="https://twitter.com/jgthms" target="_blank">
                       <span class="icon" style="color: #55acee;">
                         <i class="fa fa-twitter"></i>
                       </span>
-                    </a>
-                </div>
+                </a>
+            </div>
         </nav>
     </div>
 
     <div class="hero-body">
-        <div class="container has-text-centered">
-            <h1 class="title">
-                Title
-            </h1>
-            <h2 class="subtitle">
-                Subtitle
-            </h2>
+        <div class="container">
+            <div class="container">
+                <div class="columns is-vcentered">
+                    <div class="column">
+                        <p class="title">
+                            Documentation
+                        </p>
+                        <p class="subtitle">
+                            Everything you need to <strong>create a
+                            website</strong> with Bulma
+                        </p>
+                    </div>
+                    <div class="column is-one-third is-hidden-mobile">
+                        <div class="card sb-featured">
+                            <header class="card-header">
+                                <p class="card-header-title">
+                                    Featured
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content is-small">
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Phasellus nec iaculis
+                                    mauris.
+                                    <div>
+                                        <a href="#">read...</a>
+                                        <small>11:09 PM - 1 Jan 2016</small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+</section>
+<section class="section">
+    <div class="container ">
+        <div class="columns">
+            <div class="column">
+                <nav class="panel">
+                    <p class="panel-heading">
+                        Blog Posts
+                    </p>
+                    <a class="panel-block">
+                        bulma is the longest title I have ever seen
+                    </a>
+                    <a class="panel-block">
+                        marksheet
+                    </a>
+                    <a class="panel-block">
+                        minireset.css
+                    </a>
+                    <a class="panel-block">
+                        jgthms.github.io
+                    </a>
+                    <a class="panel-block">
+                        daniellowtw/infBoard
+                    </a>
+                    <a class="panel-block">
+                        mojs
+                    </a>
+                    <div class="panel-block">
+                        <button class="button is-small is-white is-fullwidth">
+                            Prev
+                        </button>
+                        <button class="button is-small is-white is-fullwidth">
+                            Next
+                        </button>
+                        <button class="button is-small is-white is-fullwidth">
+                            All
+                        </button>
+                    </div>
+                </nav>
+            </div>
+            <div class="column">
+                <nav class="panel">
+                    <p class="panel-heading">
+                        Articles
+                    </p>
+                    <a class="panel-block">
+                        bulma is the longest title I have ever seen
+                    </a>
+                    <a class="panel-block">
+                        marksheet
+                    </a>
+                    <a class="panel-block">
+                        minireset.css
+                    </a>
+                    <a class="panel-block">
+                        jgthms.github.io
+                    </a>
+                    <a class="panel-block">
+                        daniellowtw/infBoard
+                    </a>
+                    <a class="panel-block">
+                        mojs
+                    </a>
+                    <div class="panel-block">
+                        <button class="button is-small is-white is-fullwidth">
+                            Prev
+                        </button>
+                        <button class="button is-small is-white is-fullwidth">
+                            Next
+                        </button>
+                        <button class="button is-small is-white is-fullwidth">
+                            All
+                        </button>
+                    </div>
+                </nav>
+            </div>
+            <div class="column">
+                <nav class="panel">
+                    <p class="panel-heading">
+                        Tutorials
+                    </p>
+                    <a class="panel-block">
+                        bulma is the longest title I have ever seen
+                    </a>
+                    <a class="panel-block">
+                        marksheet
+                    </a>
+                    <a class="panel-block">
+                        minireset.css
+                    </a>
+                    <a class="panel-block">
+                        jgthms.github.io
+                    </a>
+                    <a class="panel-block">
+                        daniellowtw/infBoard
+                    </a>
+                    <a class="panel-block">
+                        mojs
+                    </a>
+                    <div class="panel-block">
+                        <button class="button is-small is-white is-fullwidth">
+                            Prev
+                        </button>
+                        <button class="button is-small is-white is-fullwidth">
+                            Next
+                        </button>
+                        <button class="button is-small is-white is-fullwidth">
+                            All
+                        </button>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="section">
+    <div class="columns">
+        <div class="column is-8 is-offset-2">
+            <nav class="level" style="border-bottom: 1px solid gray">
+                <div class="level-left">
+                    <div class="level-item">
+                        <h1 class="title">Tutorials</h1>
+                    </div>
+                </div>
 
+                <div class="level-right">
+                    <div class="level-item">
+                        <p class="subtitle">
+                            <strong>123</strong> published
+                        </p>
+                    </div>
+                </div>
+            </nav>
+            <p>Items</p>
+        </div>
+    </div>
 </section>
 </html>
