The listings look pretty good.

--- a/src/sphinx_bulma/navbar/navbar_demo.html
+++ b/src/sphinx_bulma/navbar/navbar_demo.html
@@ -203,7 +203,7 @@
 </section>
 <section class="section">
     <div class="columns">
-        <div class="column is-8 is-offset-2">
+        <div class="column is-10 is-offset-1">
             <nav class="level" style="border-bottom: 1px solid gray">
                 <div class="level-left">
                     <div class="level-item">
@@ -219,7 +219,76 @@
                     </div>
                 </div>
             </nav>
-            <p>Items</p>
+            <table class="table sb-listing-table">
+                <tbody>
+                    <tr>
+                        <td>
+                            <div class="sb-listing-title">
+                                <a href="#">This is a title that
+                                    might be
+                                    kind of long,
+                                    but we will never chop it off.</a>
+                            </div>
+                            <p class="sb-listing-synopsis">
+                                The synopses that goes with it. The synopses might
+                                be
+                                long.
+                                The synopses that goes with it. The synopses might
+                                be
+                                long.
+                                The synopses that goes with it. The synopses might
+                                be
+                                long.
+                            </p>
+                        </td>
+                        <td class="sb-listing-timeago">an hour ago</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="sb-listing-title">
+                                <a href="#">This is a title that
+                                    might be
+                                    kind of long,
+                                    but we will never chop it off.</a>
+                            </div>
+                            <p class="sb-listing-synopsis">
+                                The synopses that goes with it. The synopses might
+                                be
+                                long.
+                                The synopses that goes with it. The synopses might
+                                be
+                                long.
+                                The synopses that goes with it. The synopses might
+                                be
+                                long.
+                            </p>
+                        </td>
+                        <td class="sb-listing-timeago">an hour ago</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="sb-listing-title">
+                                <a href="#">This is a title that
+                                    might be
+                                    kind of long,
+                                    but we will never chop it off.</a>
+                            </div>
+                            <p class="sb-listing-synopsis">
+                                The synopses that goes with it. The synopses might
+                                be
+                                long.
+                                The synopses that goes with it. The synopses might
+                                be
+                                long.
+                                The synopses that goes with it. The synopses might
+                                be
+                                long.
+                            </p>
+                        </td>
+                        <td class="sb-listing-timeago">an hour ago</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </section>
