--- a/src/sphinx_bulma/navbar/navbar_demo.html
+++ b/src/sphinx_bulma/navbar/navbar_demo.html
@@ -91,12 +91,13 @@
     <div class="container ">
         <div class="columns">
             <div class="column">
-                <nav class="panel">
+                <nav class="panel sb-portlet-primary">
                     <p class="panel-heading">
                         Blog Posts
                     </p>
                     <a class="panel-block">
-                        bulma is the longest title I have ever seen
+                        I tried working on Bulma and truth is, I kind of
+                        liked it along with Sass.
                     </a>
                     <a class="panel-block">
                         marksheet
@@ -127,7 +128,7 @@
                 </nav>
             </div>
             <div class="column">
-                <nav class="panel">
+                <nav class="panel sb-portlet-info">
                     <p class="panel-heading">
                         Articles
                     </p>
@@ -163,7 +164,7 @@
                 </nav>
             </div>
             <div class="column">
-                <nav class="panel">
+                <nav class="panel sb-portlet-warning">
                     <p class="panel-heading">
                         Tutorials
                     </p>
