Not a bad look for the sidenav.

--- a/src/sphinx_bulma/navbar/navbar_demo.html
+++ b/src/sphinx_bulma/navbar/navbar_demo.html
@@ -222,75 +222,138 @@
             </nav>
             <table class="table sb-listing-table">
                 <tbody>
-                    <tr>
-                        <td>
-                            <div class="sb-listing-title">
-                                <a href="#">This is a title that
-                                    might be
-                                    kind of long,
-                                    but we will never chop it off.</a>
-                            </div>
-                            <p class="sb-listing-synopsis">
-                                The synopses that goes with it. The synopses might
-                                be
-                                long.
-                                The synopses that goes with it. The synopses might
-                                be
-                                long.
-                                The synopses that goes with it. The synopses might
-                                be
-                                long.
-                            </p>
-                        </td>
-                        <td class="sb-listing-timeago">an hour ago</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div class="sb-listing-title">
-                                <a href="#">This is a title that
-                                    might be
-                                    kind of long,
-                                    but we will never chop it off.</a>
-                            </div>
-                            <p class="sb-listing-synopsis">
-                                The synopses that goes with it. The synopses might
-                                be
-                                long.
-                                The synopses that goes with it. The synopses might
-                                be
-                                long.
-                                The synopses that goes with it. The synopses might
-                                be
-                                long.
-                            </p>
-                        </td>
-                        <td class="sb-listing-timeago">an hour ago</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div class="sb-listing-title">
-                                <a href="#">This is a title that
-                                    might be
-                                    kind of long,
-                                    but we will never chop it off.</a>
-                            </div>
-                            <p class="sb-listing-synopsis">
-                                The synopses that goes with it. The synopses might
-                                be
-                                long.
-                                The synopses that goes with it. The synopses might
-                                be
-                                long.
-                                The synopses that goes with it. The synopses might
-                                be
-                                long.
-                            </p>
-                        </td>
-                        <td class="sb-listing-timeago">an hour ago</td>
-                    </tr>
+                <tr>
+                    <td>
+                        <div class="sb-listing-title">
+                            <a href="#">This is a title that
+                                might be
+                                kind of long,
+                                but we will never chop it off.</a>
+                        </div>
+                        <p class="sb-listing-synopsis">
+                            The synopses that goes with it. The synopses might
+                            be
+                            long.
+                            The synopses that goes with it. The synopses might
+                            be
+                            long.
+                            The synopses that goes with it. The synopses might
+                            be
+                            long.
+                        </p>
+                    </td>
+                    <td class="sb-listing-timeago">an hour ago</td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="sb-listing-title">
+                            <a href="#">This is a title that
+                                might be
+                                kind of long,
+                                but we will never chop it off.</a>
+                        </div>
+                        <p class="sb-listing-synopsis">
+                            The synopses that goes with it. The synopses might
+                            be
+                            long.
+                            The synopses that goes with it. The synopses might
+                            be
+                            long.
+                            The synopses that goes with it. The synopses might
+                            be
+                            long.
+                        </p>
+                    </td>
+                    <td class="sb-listing-timeago">an hour ago</td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="sb-listing-title">
+                            <a href="#">This is a title that
+                                might be
+                                kind of long,
+                                but we will never chop it off.</a>
+                        </div>
+                        <p class="sb-listing-synopsis">
+                            The synopses that goes with it. The synopses might
+                            be
+                            long.
+                            The synopses that goes with it. The synopses might
+                            be
+                            long.
+                            The synopses that goes with it. The synopses might
+                            be
+                            long.
+                        </p>
+                    </td>
+                    <td class="sb-listing-timeago">an hour ago</td>
+                </tr>
                 </tbody>
             </table>
         </div>
     </div>
 </section>
+
+<section class="section">
+    <div class="container">
+        <div class="columns">
+            <div class="column is-2">
+                <aside class="menu sb_sidenav">
+                    <p class="menu-label">
+                        Breadcrumbs
+                    </p>
+                    <ul class="menu-list">
+                        <li><a>> Grandparent with a long title</a></li>
+                        <li><a>>> This could be the long title of a parent
+                            that goes on too long</a></li>
+                    </ul>
+                    <p class="menu-label">
+                        Previous
+                    </p>
+                    <ul class="menu-list">
+                        <li><a>Introduction</a></li>
+                    </ul>
+                    <p class="menu-label">
+                        Next
+                    </p>
+                    <ul class="menu-list">
+                        <li><a>Configuration</a></li>
+                    </ul>
+
+
+                    <p class="menu-label">
+                        Contents
+                    </p>
+                    <ul class="menu-list">
+                        <li><a>Dashboard</a></li>
+                        <li><a>This could be the long title of a parent
+                            that goes on too long</a></li>
+                    </ul>
+
+                    <p class="menu-label">
+                        Categories
+                    </p>
+                    <p>
+                        <a><span class="tag">html</span></a>
+                        <a><span class="tag">html</span></a>
+                        <a><span class="tag">html</span></a>
+                    </p>
+                    <p class="menu-label">
+                        Tags
+                    </p>
+                    <p>
+                        <a><span class="tag">html</span></a>
+                        <a><span class="tag">python</span></a>
+                        <a><span class="tag">arcade</span></a>
+                        <a><span class="tag">config</span></a>
+                    </p>
+                </aside>
+            </div>
+            <div class="column">
+                Second column
+            </div>
+        </div>
+    </div>
+</section>
+
 </html>
