I can live with the column on the right.

--- a/src/sphinx_bulma/navbar/navbar_demo.html
+++ b/src/sphinx_bulma/navbar/navbar_demo.html
@@ -25,7 +25,7 @@
                   <span></span>
                   <span></span>
                   <span></span>
-                </span>
+            </span>
             <div id="navCollapseTarget" class="nav-right nav-menu">
                 <a class="nav-item is-hidden-tablet is-active">Home</a>
                 <a class="nav-item is-hidden-tablet">Blog</a>
@@ -297,8 +297,27 @@
 <section class="section">
     <div class="container">
         <div class="columns">
-            <div class="column is-2">
-                <aside class="menu sb_sidenav">
+
+            <div class="column">
+                <h1 class="title"> Content goes here
+                </h1>
+                <p>Lorem impsum sn a lot more that might go in here. You
+                    are right to ask about this. It is not a lot of content,
+                    but it begins to scratch the surface.
+                </p>
+                <p>Lorem impsum sn a lot more that might go in here. You
+                    are right to ask about this. It is not a lot of content,
+                    but it begins to scratch the surface.
+                </p>
+                <p>Lorem impsum sn a lot more that might go in here. You
+                    are right to ask about this. It is not a lot of content,
+                    but it begins to scratch the surface.
+                </p>
+
+            </div>
+
+            <div class="column is-3">
+                <aside id="sidebarCollapseTarget" class="menu sb_sidenav">
                     <p class="menu-label">
                         Breadcrumbs
                     </p>
@@ -348,9 +367,6 @@
                         <a><span class="tag">config</span></a>
                     </p>
                 </aside>
-            </div>
-            <div class="column">
-                Second column
             </div>
         </div>
     </div>
