The series listing.

--- a/src/sphinx_bulma/navbar/navbar_demo.html
+++ b/src/sphinx_bulma/navbar/navbar_demo.html
@@ -205,7 +205,7 @@
 <section class="section">
     <div class="columns">
         <div class="column is-10 is-offset-1">
-            <nav class="level" style="border-bottom: 1px solid gray">
+            <nav class="level">
                 <div class="level-left">
                     <div class="level-item">
                         <h1 class="title">Tutorials</h1>
@@ -314,6 +314,72 @@
                     but it begins to scratch the surface.
                 </p>
 
+                <section class="section">
+                    <div class="columns">
+                        <div class="column has-text-centered">
+                            <div>Previous</div>
+                            <div>
+                                <a href="#">A possibly long title for
+                                    webpack and even longer than it might</a>
+                            </div>
+                        </div>
+                        <div class="column has-text-centered">
+                            <div>Next</div>
+                            <div>
+                                <a href="#">Config</a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+                <section class="section sb-listing">
+                    <h1 class="title sb-section-heading">This Series</h1>
+                    <p>
+                        <div class="sb-listing-title">
+                            <a href="#">This is a title that
+                                might be
+                                kind of long,
+                                but we will never chop it off.</a>
+                        </div>
+                        <div class="sb-listing-synopsis">
+                            The synopses that goes with it. The
+                            synopses might
+                            be
+                            long.
+                            The synopses that goes with it. The
+                            synopses might
+                            be
+                            long.
+                            The synopses that goes with it. The
+                            synopses might
+                            be
+                            long.
+                        </div>
+                    </p>
+                    <p>
+                        <div class="sb-listing-title">
+                            <a href="#">This is a title that
+                                might be
+                                kind of long,
+                                but we will never chop it off.</a>
+                        </div>
+                        <div class="sb-listing-synopsis">
+                            The synopses that goes with it. The
+                            synopses might
+                            be
+                            long.
+                            The synopses that goes with it. The
+                            synopses might
+                            be
+                            long.
+                            The synopses that goes with it. The
+                            synopses might
+                            be
+                            long.
+                        </div>
+                    </p>
+
+                </section>
             </div>
 
             <div class="column is-3">
