--- a/src/sphinx_bulma/navbar/navbar_demo.html
+++ b/src/sphinx_bulma/navbar/navbar_demo.html
@@ -7,7 +7,7 @@
 <body>
 
 </body>
-<section class="hero is-primary is-bold is-small">
+<section class="sb-header hero is-primary is-bold is-small">
     <div class="hero-head">
         <nav class="nav">
             <div class="nav-left">
@@ -91,7 +91,7 @@
     <div class="container ">
         <div class="columns">
             <div class="column">
-                <nav class="panel sb-portlet-primary">
+                <nav class="panel sb-portlet sb-portlet-primary">
                     <p class="panel-heading">
                         Blog Posts
                     </p>
